# Radeon-hackathon-2026-07

./: .env.example  .gitignore  AGENTS.md  HACKATHON_CHALLENGES.md  README.md  Supply_Chain_DocAgent_Presentation.pptx  Supply_Chain_DocAgent_Presentation_v2.pptx  Supply_Chain_DocAgent_Presentation_v3.pptx  create_ppt.py  create_ppt_v2.py  create_ppt_v3.py  demo_script.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
1bit-jarvis-submission/: PROJECT_SPECIFICATION.md
ForgeArena/: FORGEARENA_REPORT.md  ForgeArena 项目演示.pptx  ForgeArena项目说明文档.docx  LICENSE  README.md  ablation.py  ablation_v2.py  benchmark_amd.py  data_fetcher.py  finance_policy.jsonl  football_policy.jsonl  forgearena.py  forgearena_chat.py  forgearena_ui.py  forgearena_ui_v2.py  perception.py  requirements.txt  run_bg_v2.sh  start_ui_v2.sh  start_vllm.sh  tft_policy.jsonl  tools.py
Program - FrameForge/: .gitignore  README.md
README/: README.md
challenges/: challenge-00.md  challenge-01.md  challenge-02.md  challenge-03.md  challenge-04.md  challenge-05.md  challenge-06.md  challenge-07.md  challenge-08.md
coach/: facilitation-guide.md  scoring-rubric.md
config/: settings.yaml
data/: .gitkeep
docs/: PLAN.md  architecture.md  gif_recording_guide.md  project_report.md
notebooks/: 00_env_check.ipynb
outputs/: .gitkeep
scripts/: demo.py  dev.ps1  prod.sh  record_demo.py  setup_env.ps1
src/: agent.py  config.py  memory.py  rag.py  tools.py  ui.py
submissions/Track_2_GenomicAgent/: .gitignore  BENCHMARKS.md  Cargo.toml  DEMO_SCRIPT.md  LICENSE  MANIFEST.md  PROJECT_DESCRIPTION.md  PROJECT_SPECIFICATION.md  QUICKSTART.md  README_PROFESSIONAL.md  SUBMISSION_README.md  poster.html  setup.bat  setup.sh  verify.bat  verify.sh
submissions/Track_2_GenomicAgent/data/knowledge/: methods.md
submissions/Track_2_GenomicAgent/src/: agent.rs  api.rs  bench.rs  bootstrap.rs  fst.rs  gpu_ld.rs  intent.rs  knowledge.rs  llm.rs  main.rs  memory.rs  pca.rs  tools.rs  vcf.rs
submissions/Track_2_GenomicAgent/src/shaders/: intent_similarity.wgsl  ld_r2.wgsl
submissions/track2-coreline-systems-limited-openalpha-sentinel/: .env.example  .gitignore  LICENSE  README.md  ROCM_VALIDATION.md  pyproject.toml
submissions/track2-coreline-systems-limited-openalpha-sentinel/deploy/systemd/: openalpha-api.service  openalpha-llama.service  openalpha-worker.service
submissions/track2-coreline-systems-limited-openalpha-sentinel/evals/: fixture_expectations.json
submissions/track2-coreline-systems-limited-openalpha-sentinel/fixtures/strategies/: crypto-trend-following.md  daily-equity-mean-reversion.md  etf-pairs-trading.md
submissions/track2-coreline-systems-limited-openalpha-sentinel/scripts/: benchmark_app.py  benchmark_rocm.sh  bootstrap_local.sh  build_official_submission_package.sh  build_submission_assets.py  capture_ui.mjs  evaluate_local.py  prepare_llama_source.sh  record_demo.mjs  run_local.sh  run_worker.sh  server_backup.sh  server_bootstrap.sh  server_cli.sh  server_deploy.sh  server_logs.sh  server_process.sh  server_restore.sh  server_start.sh  server_state.sh  server_status.sh  server_stop.sh  server_sync.sh  server_tunnel.sh  setup_rocm_llama.sh  start_rocm_llama.sh  systemd_entrypoint.sh
submissions/track2-coreline-systems-limited-openalpha-sentinel/scripts/lib/: env.sh  server.sh
submissions/track2-coreline-systems-limited-openalpha-sentinel/src/openalpha_sentinel/: __init__.py  agent.py  api.py  chunking.py  cli.py  config.py  database.py  embeddings.py  extractor.py  llm.py  permissions.py  pipeline.py  retrieval.py  schemas.py  service.py  sources.py  tools.py  utils.py  worker.py
submissions/track2-coreline-systems-limited-openalpha-sentinel/src/openalpha_sentinel/web/: app.js  index.html  styles.css
submissions/track2-coreline-systems-limited-openalpha-sentinel/submission/: EXPORT_MANIFEST.md  PR_BODY.md  README.md  SHA256SUMS  TEAM.md  VIDEO.md
submissions/track2-coreline-systems-limited-openalpha-sentinel/submission/artifacts/: ARCHITECTURE.md  BENCHMARK_REPORT.md  OpenAlpha-Sentinel-Slides.en.pptx  PROJECT_SPECIFICATION.docx  PROJECT_SPECIFICATION.md  THIRD_PARTY_NOTICES.md
submissions/track2-coreline-systems-limited-openalpha-sentinel/submission/evidence/: coverage.json  demo-video-manifest.json  local-evaluation.json  rocm-benchmark-20260717T051324Z.txt  rocm-cli-rag-20260717T050851Z.txt  rocm-http-rag-20260717T050918Z.txt  rocm-offload-validation-20260717T152430Z.txt  rocm-restart-trace-20260717T051301Z.txt  rocm-test-results-20260717T050554Z.xml  rocm-test-run-20260717T050554Z.txt  test-results.xml
submissions/track2-coreline-systems-limited-openalpha-sentinel/tests/: test_api.py  test_core.py  test_sources.py
tests/: __init__.py  conftest.py
(+514 files in other folders)
