[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openalpha-sentinel"
version = "0.1.0"
description = "A local-first agent for collecting and querying open-source strategy research with evidence."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {file = "LICENSE"}
authors = [{name = "OpenAlpha Sentinel Team"}]
dependencies = [
  "fastapi>=0.115,<1",
  "feedparser>=6.0,<7",
  "httpx>=0.27,<1",
  "pydantic>=2.9,<3",
  "python-dotenv>=1.0,<2",
  "PyYAML>=6.0,<7",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
]
submission = [
  "python-docx>=1.1,<2",
  "python-pptx>=1.0,<2",
]

[project.scripts]
openalpha = "openalpha_sentinel.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openalpha_sentinel = ["web/*.html", "web/*.css", "web/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
